# Palm-Infra

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CODEBUDDY.md  CURRENT_STATE.md  NOTICE  README.md  README_zh.md  RELEASING.md  SERVER.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml
cmake/: RunPackageConsumer.cmake.in  mollmConfig.cmake.in
docs/: ARCHITECTURE.md  CURRENT_STATE.md  DEBUG_QWEN35.md  MEMORY_MODEL.md  OPTIMIZATION_LOG.md  OPTIMIZATION_LOG_QUANT.md  OPTIMIZATION_LOG_QWEN35.md  QUANTIZATION.md  README.md  performance.md  ssd-offload.md
engine/: backend.h  byte_ranges.cpp  byte_ranges.h  engine.cpp  engine.h  input_prep.cpp  input_prep.h  metal_backend.h  metal_backend.mm  model_loader.cpp  package.cpp  sampler.cpp  sampler.h  tokenizer.cpp  tokenizer.h  tokenizer_rwkv.cpp  weight_metadata.cpp  weight_metadata.h
examples/: bench.cpp  cli_common.cpp  cli_common.h  main.cpp  ppl.cpp  server.cpp
graph/: buffer_pool.cpp  buffer_pool.h  cpu_backend.cpp  execute.cpp  execute.h  graph.h  io.cpp  metal_pool.h  metal_pool.mm  mmap_file.cpp  mmap_file.h
kernels/: activations.h  attention.cpp  attention.h  elementwise.cpp  elementwise.h  gdn.cpp  gdn.h  gdn_decode.cpp  gdn_neon.h  gdn_prefill.cpp  layout.cpp  layout.h  matmul.cpp  matmul.h  matmul_dense.cpp  matmul_internal.h  matmul_pack.cpp  matmul_profile.cpp  matmul_profile.h  matmul_quant.cpp  matmul_sparse.cpp  matmul_w4.cpp  matmul_w8.cpp  moe.cpp  moe.h  moe_routing.cpp  moe_routing.h  moe_ssd.cpp  moe_ssd.h  moe_ssd_internal.h  moe_ssd_io.cpp  moe_ssd_predict.cpp  norm.cpp  norm.h  rope.cpp  rope.h  rwkv.cpp  rwkv.h  shortconv.cpp  shortconv.h  (+5 more)
kernels/metal/: metal_common.h  mollm.metal
models/: converter.py  mla.py  model_metadata.py  qwen3.py  qwen35.py  qwen35_moe.py  qwen3_moe.py  rwkv7.py  transpile.py
python/: transpile.py
tests/: bench_matmul.cpp  bench_recurrent.cpp  bench_sdpa.cpp  compare_layers.py  dump_hf_ref.py  dump_qwen35_full_np.py  dump_qwen35_ref.py  dump_youtu_ref.py  ppl_ref_tokens.h  rwkv_ppl_ref.py  test_attention.cpp  test_buffer_pool.cpp  test_byte_ranges.cpp  test_e2e.cpp  test_elementwise.cpp  test_engine.cpp  test_execute.cpp  test_gdn.cpp  test_graph.cpp  test_io.cpp  test_layout.cpp  test_matmul.cpp  test_metal_ops.cpp  test_mmap_file.cpp  test_moe.cpp  test_moe_expert_storage_metadata.py  test_moe_routing.cpp  test_moe_ssd.cpp  test_norm.cpp  test_quantized_e2e.cpp  test_qwen35_quant_policy.py  test_qwen35_ref.cpp  test_qwen3_graph.py  test_qwen3_moe_graph.py  test_rope.cpp  test_rwkv7_quant_policy.py  test_rwkv_e2e.cpp  test_shape_propagation.py  test_shortconv.cpp  test_tensor.cpp  (+6 more)
tests/package_consumer/: CMakeLists.txt  main.cpp
tools/: quantize_weight.cpp
